--- a/wiki/fr/TechDraw_ExtensionCreateVertChainDimension.html
+++ b/wiki/fr/TechDraw_ExtensionCreateVertChainDimension.html
@@ -61,9 +61,9 @@
 <ol><li>S&eacute;lectionnez trois sommets ou plus.</li>
 <li>Les deux sommets les plus hauts d&eacute;terminent la position de la cha&icirc;ne de cotes.</li>
 <li>Il existe plusieurs fa&ccedil;ons de lancer l'outil&nbsp;:
-<ul><li><span style="font-size:small;"><a href="../fr/Release_notes_1.0.html" title="Release notes 1.0/fr">introduit dans la version 1.0</a></span>&nbsp;: si la <a href="../fr/TechDraw_Preferences.html#Cotes" title="TechDraw Preferences/fr">pr&eacute;f&eacute;rence</a> <b>Outils de cotation</b> est r&eacute;gl&eacute;e sur <code>Outil unique</code> (par d&eacute;faut)&nbsp;: appuyez sur la fl&egrave;che vers le bas &agrave; droite du bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=TechDraw_Dimension.svg&amp;filetimestamp=20241126214027&amp;.html" class="mw-file-description"><img src="../File/TechDraw_Dimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Toolbar_flyout_arrow.svg&amp;filetimestamp=20210802183935&amp;.html" class="mw-file-description"><img src="../File/Toolbar_flyout_arrow.svg" decoding="async" width="8" height="16" class="mw-file-element" data-file-width="32" data-file-height="64"></a></span></span> et s&eacute;lectionnez l'option <b><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionCreateVertChainDimension.svg&amp;filetimestamp=20240707202153&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionCreateVertChainDimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> chaine de cotes verticales</b> du menu d&eacute;roulant.</li>
-<li>Si cette pr&eacute;f&eacute;rence a une valeur diff&eacute;rente (et dans <span style="font-size:small;color:blue;">version 0.21 et pr&eacute;c&eacute;dentes</span>)&nbsp;: appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionCreateVertChainDimension.svg&amp;filetimestamp=20240707202153&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionCreateVertChainDimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">chaine de cotes verticales</a></span>.</li>
-<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Formater/organiser les cotes &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionCreateVertChainDimension.svg&amp;filetimestamp=20240707202153&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionCreateVertChainDimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> chaine de cotes verticales</b> du menu.</li></ul></li>
+<ul><li><span style="font-size:small;"><a href="../fr/Release_notes_1.0.html" title="Release notes 1.0/fr">introduit dans la version 1.0</a></span>&nbsp;: si la <a href="../fr/TechDraw_Preferences.html#Cotes" title="TechDraw Preferences/fr">pr&eacute;f&eacute;rence</a> <b>Outils de cotation</b> est r&eacute;gl&eacute;e sur <code>Outil unique</code> (par d&eacute;faut)&nbsp;: appuyez sur la fl&egrave;che vers le bas &agrave; droite du bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=TechDraw_Dimension.svg&amp;filetimestamp=20241126214027&amp;.html" class="mw-file-description"><img src="../File/TechDraw_Dimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Toolbar_flyout_arrow.svg&amp;filetimestamp=20210802183935&amp;.html" class="mw-file-description"><img src="../File/Toolbar_flyout_arrow.svg" decoding="async" width="8" height="16" class="mw-file-element" data-file-width="32" data-file-height="64"></a></span></span> et s&eacute;lectionnez l'option <b><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionCreateVertChainDimension.svg&amp;filetimestamp=20240707202153&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionCreateVertChainDimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Chaine de cotes verticales</b> du menu d&eacute;roulant.</li>
+<li>Si cette pr&eacute;f&eacute;rence a une valeur diff&eacute;rente (et dans <span style="font-size:small;color:blue;">version 0.21 et pr&eacute;c&eacute;dentes</span>)&nbsp;: appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionCreateVertChainDimension.svg&amp;filetimestamp=20240707202153&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionCreateVertChainDimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Chaine de cotes verticales</a></span>.</li>
+<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Formater/organiser les cotes &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionCreateVertChainDimension.svg&amp;filetimestamp=20240707202153&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionCreateVertChainDimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Chaine de cotes verticales</b> du menu.</li></ul></li>
 <li>La cha&icirc;ne de cotes avec des textes de cotes centr&eacute;s est cr&eacute;&eacute;e.</li></ol>
 <p><br>
 </p>
@@ -112,12 +112,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125101136
+Cached time: 20260125101216
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.070 seconds
-Real time usage: 0.089 seconds
+CPU time usage: 0.090 seconds
+Real time usage: 0.117 seconds
 Preprocessor visited node count: 378/1000000
 Post&#8208;expand include size: 26968/2097152 bytes
 Template argument size: 10754/2097152 bytes
@@ -128,19 +128,19 @@ Unstrip post&#8208;expand size: 1399/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   23.520      1 -total
- 22.20%    5.222      1 Template:TechDraw_Tools_navi/fr
- 18.98%    4.463      2 Template:Navigation_menu_2
- 13.04%    3.067      1 Template:Userdocnavi/fr
- 12.32%    2.897      1 Template:Value
- 10.05%    2.364      2 Template:Docnav/fr
-  9.90%    2.329      1 Template:GuiCommand/fr
-  6.49%    1.526      1 Template:Incode
-  6.32%    1.487      1 Template:Version/fr
-  6.18%    1.453      1 Template:VersionMinus/fr
+100.00%   26.176      1 -total
+ 25.90%    6.779      1 Template:TechDraw_Tools_navi/fr
+ 19.86%    5.199      2 Template:Navigation_menu_2
+ 13.73%    3.593      1 Template:Userdocnavi/fr
+ 10.10%    2.645      2 Template:Docnav/fr
+  9.40%    2.460      1 Template:GuiCommand/fr
+  9.06%    2.371      1 Template:Value
+  6.77%    1.772      1 Template:Version/fr
+  6.76%    1.770      1 Template:VersionMinus/fr
+  5.81%    1.521      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277854-0!canonical and timestamp 20260125101136 and revision id 1743560. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277854-0!canonical and timestamp 20260125101216 and revision id 1743562. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
