--- a/wiki/fr/TechDraw_ExtensionCreateHorizChainDimension.html
+++ b/wiki/fr/TechDraw_ExtensionCreateHorizChainDimension.html
@@ -113,12 +113,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125101346
+Cached time: 20260125101351
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.081 seconds
-Real time usage: 0.151 seconds
+CPU time usage: 0.078 seconds
+Real time usage: 0.103 seconds
 Preprocessor visited node count: 378/1000000
 Post&#8208;expand include size: 26884/2097152 bytes
 Template argument size: 10707/2097152 bytes
@@ -129,19 +129,19 @@ Unstrip post&#8208;expand size: 1612/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   52.530      1 -total
- 37.22%   19.553      1 Template:Value
- 32.06%   16.842      1 Template:Incode
- 14.65%    7.694      1 Template:TechDraw_Tools_navi/fr
- 10.82%    5.685      2 Template:Navigation_menu_2
-  8.13%    4.272      1 Template:Userdocnavi/fr
-  7.21%    3.787      2 Template:Docnav/fr
-  5.93%    3.116      1 Template:GuiCommand/fr
-  5.41%    2.843      2 Template:Button
-  5.37%    2.820      3 Template:MenuCommand
+100.00%   19.680      1 -total
+ 24.69%    4.858      1 Template:TechDraw_Tools_navi/fr
+ 23.11%    4.547      2 Template:Navigation_menu_2
+ 14.72%    2.897      1 Template:Userdocnavi/fr
+ 10.73%    2.112      1 Template:Value
+ 10.21%    2.010      1 Template:GuiCommand/fr
+  9.94%    1.957      2 Template:Docnav/fr
+  6.02%    1.185      1 Template:VersionMinus/fr
+  5.76%    1.134      1 Template:Version/fr
+  4.83%    0.950      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277844-0!canonical and timestamp 20260125101346 and revision id 1743565. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277844-0!canonical and timestamp 20260125101351 and revision id 1743565. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
