--- a/wiki/fr/TechDraw_ExtensionLinePerpendicular.html
+++ b/wiki/fr/TechDraw_ExtensionLinePerpendicular.html
@@ -1,7 +1,7 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">TechDraw ExtensionLinePerpendicular/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-TechDraw+ExtensionLinePerpendicular&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
 <li><a href="../de/TechDraw_ExtensionLinePerpendicular.html" class="mw-pt-progress mw-pt-progress--complete" title="TechDraw Erg&auml;nzungRechtwinkligeLinie (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../TechDraw_ExtensionLinePerpendicular.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw ExtensionLinePerpendicular (100% translated)" lang="en" dir="ltr">English</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../pl/TechDraw_ExtensionLinePerpendicular.html" class="mw-pt-progress mw-pt-progress--complete" title="Rysunek Techniczny: Rozszerzenie Dodaj pomocnicz&#261; lini&#281; prostopad&#322;&#261; (100% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
 <div class="docnav">
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ExtensionLineParallel.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_ExtensionLineParallel.html" title="TechDraw ExtensionLineParallel/fr">Ligne parall&egrave;le</a></div>
@@ -70,14 +70,12 @@
 </div>
 <p><br>
 </p>
-<div class="mw-translate-fuzzy">
 <div class="docnav">
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ExtensionLineParallel.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_ExtensionLineParallel.html" title="TechDraw ExtensionLineParallel/fr">Ligne parall&egrave;le</a></div>
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ExtensionInsertDiameter.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_ExtensionInsertDiameter.html" title="TechDraw ExtensionInsertDiameter/fr">Diam&egrave;tre</a>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ExtensionCreateHorizChainDimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_ExtensionCreateHorizChainDimension.html" title="TechDraw ExtensionCreateHorizChainDimension/fr">Chaine horizontale de cotes</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="../fr/TechDraw_Workbench.html" title="TechDraw Workbench/fr">Atelier TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
-</div>
 </div>
 <div class="NavFrame" style="margin: 0px; text-align: center; border-collapse: collapse; font-size: 100%; border-top-style: double; border-top-style: 1px; clear:both;">
     <div class="NavHead mw-collapsible mw-collapsed" style="margin: 1px; font-weight: normal; background-color: var(--background-color-neutral-subtle, #fefefe);"><span typeof="mw:File"><a href="../index.php?title=Workbench_TechDraw.svg&amp;filetimestamp=20240713144548&amp;.html" class="mw-file-description"><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/TechDraw_Workbench.html" title="TechDraw Workbench/fr">TechDraw</a>
@@ -117,34 +115,34 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125101830
+Cached time: 20260125101836
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.084 seconds
-Real time usage: 0.136 seconds
-Preprocessor visited node count: 349/1000000
-Post&#8208;expand include size: 25860/2097152 bytes
-Template argument size: 10234/2097152 bytes
+CPU time usage: 0.075 seconds
+Real time usage: 0.115 seconds
+Preprocessor visited node count: 348/1000000
+Post&#8208;expand include size: 25980/2097152 bytes
+Template argument size: 10314/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1171/5000000 bytes
+Unstrip post&#8208;expand size: 1172/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   25.529      1 -total
- 24.94%    6.366      1 Template:TechDraw_Tools_navi/fr
- 20.23%    5.164      2 Template:Navigation_menu_2
- 18.19%    4.643      1 Template:Userdocnavi/fr
- 13.10%    3.344      2 Template:Docnav/fr
- 12.65%    3.230      1 Template:MenuCommand
- 11.29%    2.882      1 Template:GuiCommand/fr
- 10.56%    2.695      1 Template:Caption
-  6.42%    1.640      1 Template:Button
+100.00%   28.749      1 -total
+ 35.75%   10.279      1 Template:TechDraw_Tools_navi/fr
+ 22.88%    6.577      2 Template:Navigation_menu_2
+ 17.67%    5.080      1 Template:Userdocnavi/fr
+ 12.00%    3.450      1 Template:GuiCommand/fr
+ 10.56%    3.035      2 Template:Docnav/fr
+ 10.47%    3.011      1 Template:MenuCommand
+  6.26%    1.801      1 Template:Caption
+  5.04%    1.448      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277811-0!canonical and timestamp 20260125101830 and revision id 1743574. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277811-0!canonical and timestamp 20260125101836 and revision id 1743576. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
