--- a/wiki/fr/TechDraw_ExtensionCreateVertChainDimension.html
+++ b/wiki/fr/TechDraw_ExtensionCreateVertChainDimension.html
@@ -112,12 +112,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125101949
+Cached time: 20260125102015
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.101 seconds
-Real time usage: 0.147 seconds
+CPU time usage: 0.096 seconds
+Real time usage: 0.129 seconds
 Preprocessor visited node count: 378/1000000
 Post&#8208;expand include size: 27076/2097152 bytes
 Template argument size: 10826/2097152 bytes
@@ -128,19 +128,19 @@ Unstrip post&#8208;expand size: 1399/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   40.028      1 -total
- 29.90%   11.967      1 Template:TechDraw_Tools_navi/fr
- 19.46%    7.789      2 Template:Navigation_menu_2
- 11.17%    4.470      1 Template:Userdocnavi/fr
-  9.45%    3.783      2 Template:Button
-  8.71%    3.488      1 Template:VersionMinus/fr
-  7.65%    3.061      1 Template:Version/fr
-  7.54%    3.017      1 Template:Value
-  7.03%    2.814      1 Template:GuiCommand/fr
-  6.23%    2.493      2 Template:Docnav/fr
+100.00%   32.404      1 -total
+ 27.51%    8.913      1 Template:TechDraw_Tools_navi/fr
+ 19.67%    6.373      2 Template:Navigation_menu_2
+ 15.57%    5.044      1 Template:Userdocnavi/fr
+ 11.83%    3.834      1 Template:Value
+ 11.21%    3.632      1 Template:VersionMinus/fr
+  8.40%    2.722      1 Template:GuiCommand/fr
+  7.77%    2.518      2 Template:Docnav/fr
+  5.79%    1.877      1 Template:Incode
+  4.27%    1.382      1 Template:Version/fr
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277854-0!canonical and timestamp 20260125101948 and revision id 1743580. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277854-0!canonical and timestamp 20260125102015 and revision id 1743580. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
