--- a/wiki/Sketcher_ConstrainEqual.html
+++ b/wiki/Sketcher_ConstrainEqual.html
@@ -89,8 +89,8 @@
 <p>The <a href="Sketcher_scripting.html" title="Sketcher scripting">Sketcher scripting</a> page explains the values which can be used for <code>Edge1</code> and <code>Edge2</code> and  contains further examples on how to create constraints from Python scripts.
 </p>
 <h2><span class="mw-headline" id="Notes">Notes</span></h2>
-<p>Using <a href="Sketcher_ConstrainDistanceX.html" title="Sketcher ConstrainDistanceX">horizontal</a> and <a href="Sketcher_ConstrainDistanceY.html" title="Sketcher ConstrainDistanceY">vertical dimensions</a> instead of <a class="mw-selflink selflink">equal constraints</a> can prevent <a href="Sketcher_Workbench.html#Flipping" title="Sketcher Workbench">flipping</a>. Points constrained by these dimensions will not switch places. The constraints must be linked with an expression to each other or to a value in a VarSet or spreadsheet.
-</p><p><br>
+<ul><li>Using <a href="Sketcher_ConstrainDistanceX.html" title="Sketcher ConstrainDistanceX">horizontal</a> and <a href="Sketcher_ConstrainDistanceY.html" title="Sketcher ConstrainDistanceY">vertical dimensions</a> instead of equal constraints can prevent <a href="Sketcher_Workbench.html#Flipping" title="Sketcher Workbench">flipping</a>. Points constrained by these dimensions will only switch places if the sign of their value is changed. To keep the dimensions equal the constraints can be linked to each other with an expression, or to the same value in a <a href="Std_VarSet.html" title="Std VarSet">VarSet</a> or <a href="Spreadsheet_CreateSheet.html" title="Spreadsheet CreateSheet">spreadsheet</a>.</li></ul>
+<p><br>
 </p>
 <div class="docnav">
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="File/Sketcher_ConstrainTangent.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="Sketcher_ConstrainTangent.html" title="Sketcher ConstrainTangent">Tangent/Collinear Constraint</a></div>
@@ -135,12 +135,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260121053941
+Cached time: 20260125102147
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.122 seconds
-Real time usage: 0.162 seconds
+CPU time usage: 0.105 seconds
+Real time usage: 0.140 seconds
 Preprocessor visited node count: 448/1000000
 Post&#8208;expand include size: 24396/2097152 bytes
 Template argument size: 9753/2097152 bytes
@@ -151,19 +151,19 @@ Unstrip post&#8208;expand size: 3474/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   23.284      1 -total
- 25.67%    5.976      1 Template:Sketcher_Tools_navi
- 22.47%    5.233      2 Template:Navigation_menu_2
- 15.71%    3.658      1 Template:GuiCommand
- 13.28%    3.092      1 Template:Userdocnavi
-  9.69%    2.256      2 Template:Docnav
-  7.95%    1.850      1 Template:Code
-  6.17%    1.436      2 Template:Version
-  5.72%    1.333      5 Template:MenuCommand
-  5.49%    1.278      2 Template:Incode
+100.00%   17.273      1 -total
+ 31.06%    5.364      1 Template:Sketcher_Tools_navi
+ 22.25%    3.844      2 Template:Navigation_menu_2
+ 13.21%    2.281      1 Template:GuiCommand
+ 11.93%    2.061      1 Template:Userdocnavi
+ 10.17%    1.756      1 Template:Code
+  8.83%    1.525      2 Template:Docnav
+  6.78%    1.171      2 Template:Incode
+  4.50%    0.777      3 Template:KEY
+  4.45%    0.768      5 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:1755-0!canonical and timestamp 20260121053946 and revision id 1741785. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:1755-0!canonical and timestamp 20260125102225 and revision id 1743584. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
